@@ -17,3 +17,4 @@
      * if you disable httpd user checking - you need to make sure to
        define the installation group to be the group that the server is
        runnig as
+     * Continue creating global context for storage of data
