@@ -20,4 +20,7 @@ file, mapping dir to user instead of user to dir
 
 <LI>if you disable httpd user checking - you need to make sure to define the 
 installation group to be the group that the server is runnig as
+
+<LI>Continue creating global context for storage of data
+
 </UL>
